[project]
name = "stock-news-impact-analyzer"
version = "0.1.0"
description = "OpenEnv Hackathon project: Stock News Impact Analyzer"
authors = [{ name = "SS" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "gradio",
    "openenv-core>=0.2.0"
]


[project.scripts]
server = "server.app:main"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
