[project]
name = "stock-news-impact-analyzer"
version = "0.1.0"
description = "OpenEnv Hackathon project: Stock News Impact Analyzer"
authors = [{ name = "SS" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "gradio",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
